test/files/neg/t650.scala
// test/Test2.scala
import scala.collection.mutable._
trait Test2 extends Stack
