test/files/neg/t650.check
t650.scala:3: error: missing type arguments
trait Test2 extends Stack
                    ^
1 error
